 + Campaigns and missions now use the user's chosen custom clan colors
 + New default brown clan color for better contrast
 * Functionality of controllers restored
 * Fix crash when 2 or more controllers were connected
 * Fix hammer and pickhammer not digging correctly at wrap world edge
 * Fix freezer ray not working through wrap world edge
 * Fix freezer ray going through bounce world edge
 * Laser sight now works properly through wrap world edge
 * Fix extreme amounts of droplets when shooting with minigun into ocean world edge
 * Fix hog being unable to walk after using sniper rifle without firing both shots
 * Fix video recorder not working when game audio was disabled
 * Fix cursor teleporting to center after leaving game with a video recording
 * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 * Fix /hta, /hsa and /hya commands not writing message in chat
 * Limit hedgehog health to 268435455 to prevent some bugs

Frontend:
 * Controllers are detected again
 * No longer allow having schemes with equal names (case-insensitive)

Highlander:
 * Fix all hogs receiving a free teleport after hog placement phase

TechRacer:
 * Fix rare bug causing crates and other objects to not appear on start of turn

Continental supplies:
 + Continents are now selected before the game starts
 + Continents give hog different start health
 + Add Antarctica special: Upside-Down World (teleport to top of map)
 + Major rewrite of ALL texts for better usability
 + Add custom weapon tooltips
 + Improve audiovisual effects
 + Show message when hog receives new continent ammo
 + Sabotaged hedgehogs also emit smoke when it's not their turn
 + Can switch continent in reverse order with [Precise]+[Switch]
 * Invulnerability now protects from sabotage damage
 * Sabotage kills hog instantly when health reaches 0
 * Reliably prevent using of Lonely Cries and baseball bat specials when usage not allowed